--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -5,5 +5,7 @@
 {% block body %}
     <div class="example-wrapper">
         <a href="{{ path('app_homepage') }}">Homepage</a>
+        <hr>
+        <a href="{{ path('app_city') }}">City</a>
     </div>
 {% endblock %}
